# Squid

./: .gitignore  .gitmodules  CLAUDE.md  HCS_PERFORMANCE_OPTIMIZATION.md  README.md
software/: .gitignore  .mcp.json  README.md  configuration_Squid+.ini  hid.py  main_gabeen.py  main_hcs.py  main_headless.py  main_malaria.py  mcp_microscope_server.py  ndviewer_light_zarr_notification_fix.md  pyproject.toml  setup_22.04.sh  setup_26.04.sh  setup_windows.ps1  test_sequences.csv  toupcam_tests.py
software/.claude/: session-notes.md
software/acquisition_watchdog/: README.md  __main__.py  config.py  monitor.py
software/cache/: config_file_path.txt  laser_af_reference_plane.txt  last_coords.txt  sample_formats.csv
software/configurations/: channel_definitions.json  configuration_HCS_v2.ini  configuration_Squid+.ini  configuration_Squid+_Andor.ini  configuration_Squid+_Cicero_LDI.ini  configuration_Squid+_H117_ORCA.ini  configuration_Squid+_H117_ORCA_Fluidics.ini  configuration_Squid+_Kinetix_LDI_XLight_Xeryon.ini  configuration_Squid+_Tucsen.ini  configuration_Squid+_Tucsen_Libra.ini  configuration_octopi_v2.ini  configuration_squid_6060.ini  fluidics_simulation.json
software/control/: TUCam.py  __init__.py  _def.py  _multipoint_custom_script_entry.py  acquisition_yaml_loader.py  asi_objective_turret.py  camera.py  camera_TIS.py  camera_andor.py  camera_flir.py  camera_hamamatsu.py  camera_ids.py  camera_kinetix.py  camera_photometrics.py  camera_toupcam.py  camera_tucsen.py  camera_tucsen_abc.py  camera_tucsen_fl26bw.py  celesta.py  channel_sequence.py  config_examples.py  config_loader.py  core.py  core_displacement_measurement.py  default_config_generator.py  firmware_sim_serial.py  gui.py  gui_hcs.py  gui_malaria.py  illumination_andor.py  illumination_celesta.py  illumination_versalase.py  laser_engine_widget.py  lighting.py  lighting_versalase.py  microcontroller.py  microscope.py  microscope_control_server.py  modbus_rtu.py  multipoint_custom_script_entry.py  (+18 more)
software/docs/: automation.md  channel_configuration.md  configuration-api.md  configuration-migration.md  configuration-system.md  core-service-api.md  downsampled-plate-view.md  illumination-control.md  ipython_kernel_design.md  laser-af-channel-offset-design.md  laser-af-channel-offset-plan.md  mcp_integration.md  ndviewer-tab.md  orchestrator-v2-audit.md  per-region-laser-af-offset.md  quickstart-api.md  quickstart-mcp.md  quickstart-plate-scan.md  workflow-runner.md  zarr-v3-format.md
software/machine_configs/: README.md  cameras.yaml.example  filter_wheels.yaml  filter_wheels.yaml.example  illumination_channel_config.yaml  illumination_channel_config.yaml.example
software/napari/: __init__.py
software/napari_stub_backup/: __init__.py
software/objective_and_sample_formats/: sample_formats.csv
software/old_cache/: laser_af_reference_plane.txt  sample_formats.csv
software/pending/: 2026-01-25-zarr-overhead-optimization.md  qmetaobject-invokemethod-error.md
software/pyqtgraph/: __init__.py  dockarea.py
software/scripts/: benchmark_plate_view.py  run_acquisition.py
software/setup_scripts/: setup_22.04.sh
software/squid/: abc.py  acquisition_state.py  application.py  config.py  events.py  exceptions.py  logging.py  qt_event_dispatcher.py  registry.py  ui_event_bus.py
software/squid_service/: config.py  events.py  faults.py  gui_bridge.py  headless.py  jobs.py  methods.py  models.py  service.py  state.py  timeutil.py  wells.py
software/src/: _def.py  main_hcs.py
software/test/: test_20x.csv
software/test_files/: README.md  fluidics_sequences_fast.csv  test_protocol_fast.yaml
software/tests/: HEADLESS_GUI_COVERAGE_MATRIX.md  HEADLESS_GUI_TEST_CHECKLIST.md  conftest.py  gui_helpers.py  test_acquisition_yaml_drop_mixin.py  test_multiport_illumination_bugs.py  test_multiport_illumination_edge_cases.py  test_multiport_illumination_protocol.py  test_ome_tiff_saving.py  test_record_zstack_camera_fps.py  test_record_zstack_widget.py  test_watchdog.py  tools.py
software/tools/: README_pr540_repro.md  acquisition_test.py  analyze_acquisition_logs.py  asi_z_bringup.py  benchmark_save_formats.py  camera_stress_test.py  count_mcu_timeouts.py  evaluate_intensity_calibration.py  format_comparison_tests.md  gen_protocol_golden.py  generate_intensity_calibrations.py  hardware_acquisition_capture_test.py  hardware_acuisition_capture_test.py  hot_pixel_test_gui.py  list_cameras.py  microcontroller_stress_test.py  microcontroller_triggering_stress_test.py  microscope_stress_test.py  stitcher.py  (+16 more)
(+1989 files in other folders)
